--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -39,10 +39,10 @@ The nature of the model is not conducive to a simple scaling behavior that would
 
 A full study of the parameter scan for this model was not available for this report; thus we recommend scanning a range of  possible widths as discussed in a more-limited way for the \schannel mono-jet, spanning from the minimal width to a value approaching the particle limit, e.g. $g=0.5,1,2,3$. A coupling benchmark such as $g=1$ should be considered for each mass point since this would be a distinctive feature of this benchmark from SUSY models with sbottom squarks (see Section~\ref{sec:monojet_t_channel} for further discussion): Cross-sections for unit couplings can be found in Appendix~\ref{app:xsecs_bFDM}. The coupling could also be chosen to fulfill constraints from the relic density (see Appendix~\ref{app:Relic_Density_bFDM}, with corresponding cross sections in Tables~\ref{tab:g_relic_13T} onwards). 
 
-A scan of Dark Matter and mediator masses should be done in the on-shell region $M_\Phi > \mDM + m_b$, since the cross-sections in the off-shell region are too small to be sensitive with early LHC data, spanning from 10 to 500 GeV in \mDM and from 10 to 1300 GeV in \mMed. 
+A scan of Dark Matter and mediator masses should be done in the on-shell region $\MPhi > \mDM + m_b$, since the cross-sections in the off-shell region are too small to be sensitive with early LHC data, spanning from 10 to 500 GeV in \mDM and from 10 to 1300 GeV in \mMed. 
 
 %  \item $\mDM=10-500$ GeV with a binning of 50 GeV for $\mDM<100$ and  100 GeV otherwise; 
-%  \item $MPhi=10-1300$ with a binning of 100 GeV;
+%  \item $\MPhi=10-1300$ with a binning of 100 GeV;
 
 % Therefore, the coupling scan is chosen as a discrete set of values $g=0.5,1,2,3$ for each mass point.
 %~\Todo{Are we sure the models in SVN have minimal width? What is the max coupling so that the width is still lower than the mass?}
@@ -70,15 +70,15 @@ A scan of Dark Matter and mediator masses should be done in the on-shell region 
       \centering 
       \includegraphics[scale=0.32]{figures/bFDM/bfdm_35_500/Njets.eps}
     \end{minipage}
-    \caption{MET (left) and jet multiplicity (right) for $\mDM=35$~GeV and $MPhi=500$~GeV for couplings corresponding to relic density weights and also $g=1,2$ \label{fig:g_comp}}
+    \caption{MET (left) and jet multiplicity (right) for $\mDM=35$~GeV and $\MPhi=500$~GeV for couplings corresponding to relic density weights and also $g=1,2$ \label{fig:g_comp}}
 \end{figure}
 
 %The following benchmark points could be produced as a starting point for the parameter space for this model:
 %
 %\begin{itemize}
 %  \item $\mDM=10-500$ GeV with a binning of 50 GeV for $\mDM<100$ and  100 GeV otherwise; 
-%  \item $MPhi=10-1300$ with a binning of 100 GeV;
-%  \item $MPhi > \mDM + m_b$, since the cross-sections in the off-shell region are too small to be sensitive with early LHC data;
+%  \item $\MPhi=10-1300$ with a binning of 100 GeV;
+%  \item $\MPhi > \mDM + m_b$, since the cross-sections in the off-shell region are too small to be sensitive with early LHC data;
 %\end{itemize}
 
 %This scan of the parameter space is summarized in Table~\ref{tab:monobscan}.
@@ -104,6 +104,6 @@ A scan of Dark Matter and mediator masses should be done in the on-shell region 
 %\label{tab:monobscan}
 %\end{table}
 
-%The increase in the center of mass energy from 8 to 13 TeV leads to a cross-section increase that is a function of $MPhi$, 
+%The increase in the center of mass energy from 8 to 13 TeV leads to a cross-section increase that is a function of \MPhi, 
 %with a smaller dependency for \mDM. Therefore, the sensitivity to this model will increase in early 13~TeV data compared to 8 TeV searches~\cite{Aad:2014vea}.
 
