--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -155,7 +155,9 @@ transition region between on-shell and off-shell mediators. %, as inFig.~\ref{fi
 %\end{center}
 %\end{figure}
 
-Typically only weak dependencies on width or equivalently couplings are observed (see Fig~\ref{fig:widthsmallscan}), except for large mediator masses of $\sim 1.5\,{\rm TeV}$ or for very small couplings of $\sim 10^{-2}$. These regimes where width effects are significant have production cross sections that are too small to be relevant for $30\,{\rm fb}^{-1}$ and are not considered here. However, with the full Run-2 dataset, such models may be within reach. The weak dependence on the typical width values can be understood as the parton distribution function having the dominant effect on mediator production. As shown in Section~\ref{sub:parameter_scan_monojet}, for couplings $\sim O(1)$ the width is large enough that the $p_T$ of the mediator is determined mainly by the PDF.
+Typically only weak dependencies on couplings are observed (see Fig~\ref{fig:widthsmallscan}) where the variation with width of the integral over parton distributions is unimportant. As shown in Section~\ref{sub:parameter_scan_monojet}, for couplings $\sim O(1)$ the width is large enough that the $p_T$ of the mediator is determined mainly by the PDF. 
+
+At large mediator masses ($\sim 1.5\,{\rm TeV}$) or very small couplings ($\sim 10^{-2}$), width effects are significant, but these regimes have production cross sections that are too small to be relevant for $30\,{\rm fb}^{-1}$ and are not studied here. However, with the full Run~2 dataset, such models may be within reach. 
 
 \begin{figure}[!ht]
   \begin{center}
