--- a/doc/tex/EWSpecificModels_VAMediators.tex
+++ b/doc/tex/EWSpecificModels_VAMediators.tex
@@ -43,37 +43,15 @@ still worth comparing with searches in the jet+\MET final state.
 In the case of a \spinone mediator,
 an example Feynman diagram for these processes can be constructed by taking
 Fig.~\ref{fig:OP} and replacing the gluon with $\gamma,W$ or $Z$.
-The interest for searches with W bosons in the final state
-has been elevated by the increased cross section
-for certain choices of couplings for a spin-1 mediator~\cite{Bai:2012xg}.
-Run-1 searches have considered three sample cases for the product of
-up and down quark couplings to the mediator, denoted as $\xi$:
+
+When the initial state radiation is a $W^\pm$ boson, Run~1 searches have considered three benchmark cases adapted from the vector interaction in Ref. ~\cite{Bai:2012xg}, distinguished by $\xi$, the strength of the $d$ quark coupling relative the $u$ quark coupling:
 \begin{itemize}
  \item[$\xi=0$:] Mediator couples to up-type or down-type quarks, but not both;
  \item[$\xi=1$:] Mediator couples to up-type and down-type quarks with same strength;
  \item[$\xi=-1$:] Mediator couples to up-type and down-type quarks with same strength, but opposite sign.
 \end{itemize}
-The $\xi=-1$ case leads to a large increase in the cross-section of the process,
-and modifies the spectrum of missing transverse energy or
-transverse mass used for the searches. The sensitivity of the W+\MET search for
-this benchmark in this case surpasses that of the jet+\MET search.
-However, as shown in Ref.~\cite{Bell:2015sza}, the cross-section increase is due
-to the production of longitudinally polarized W bosons,
-in violation of electroweak gauge symmetries. Unless further
-particles are introduced (in a fashion similar
-to the Higgs boson in the Standard Model), choosing a value of $\xi=-1$
-for this simplified model will lead to a manifest violation of unitarity at LHC energies.
-The simplified model with a vector mediator exchanged in the \schannel model
-can still be considered as a benchmark for searches with a W boson if $\xi=1$.
-We leave the study of further models with cross-section enhancements due
-to different couplings to up and down quarks for studies beyond the early LHC searches
-covered in this document.
-An example of such model is the case of both DM and SM Higgs charged under a new $U(1)'$ symmetry,
-with a  small mass mixing between the SM Z-boson and the new \Zprime-boson.
-This leads
-to different effective DM couplings to $u_L$ and $d_L$, proportional to
-their coupling to the Z boson, detailed in Appendix~\ref{app:EWSpecificModels_Appendix}.
 
+Contemplation of $\xi=-1$ heightened interest in searches for \spinone mediators with $W^\pm$ bosons in the final state. This choice enhances the cross-section significantly above the other choices and hardens the distribution of missing transverse energy used in the searches. The sensitivity of the $W+\MET$ search then surpasses that of the jet$+$\MET search. However, the situation $\xi=-1$ does not appear in an $\mathrm{SU}(2)$-gauge-invariant simplified model.\sidenote{It is well-known that the diagrams in which the $W$ couples to $u$ and $\bar{d}$ have opposite sign. This is what gives rise to the ``helciity zero'' in $u \bar{d} \rightarrow W g$. The relative sign is set by $\mathrm{SU}(2)$ and the statement that the mediator is an $\mathrm{SU}(2)$ singlet. We can increase the cross section by changing the sign, but to do so we have to give the mediator some $\mathrm{SU}(2)$ quantum number, making it, and the associated \chi, visible.} The simplified model with a vector mediator exchanged in the \schannel model is still viable when $\xi=1$. Ref.~\cite{Bell:2015sza} discusses the viability of departures $\xi < 1$ from both gauge-invariance and experimental points of view. An example of a model that arranges different effective DM couplings to $u_L$ and $d_L$ is detailed in Appendix~\ref{app:EWSpecificModels_Appendix}.
 
 %The scan in the parameters that characterize this simplified model for EW boson + \MET
 %searches follow what is
@@ -140,7 +118,7 @@ $\Gamma=\mMed/3$} \\ \hline
 
 Examples of relevant kinematic distributions for selected benchmark points are
 shown in Fig.~\ref{fig:DMV_EW_kinematics_SVMed}. 
-leading-order cross-sections for the chosen 
+Leading-order cross-sections for the chosen 
 benchmark points are shown in Appendix~\ref{app:EWSpecificModels_Appendix}.
 
 \begin{figure}[h!]
