remove sentence in response to comment by Davide
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@292 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -60,9 +60,9 @@ An experimental search will place a limit on $f$.
 For a fixed $f$, a small value of $g$ will correspond
 to a small value of $\Lambda$.   The EFT approximation breaks down
 if $Q>\Lambda$, where $Q$ is a typical hard scale of the process.
-One possible example is $\Qtr^2=p(\bar\chiDM\chiDM)^2$, i.e.
-the momentum flow through
-the \schannel.
+%One possible example is $\Qtr^2=p(\bar\chiDM\chiDM)^2$, i.e.
+%the momentum flow through
+%the \schannel.% asked by Davide to remove this as its not correct.
 Thus the limit on small $g$ can only be reliable if the
 kinematic region $Q>\Lambda$ is removed from the prediction.
 On the other hand, if, for the same value of $f$, a large $\Lambda$
