--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -11,7 +11,7 @@
 % and http://arxiv.org/abs/arXiv:1409.2893
 
 The preceding sections address models with a Dirac fermion coupled to
-the SM through exchange of a neutral \spinero or \spinone particle in an
+the SM through exchange of a neutral \spinzero or \spinone particle in an
 \schannel process.  A \tchannel process may couple the SM and DM
 directly, leading to a different phenomenology.
 For completeness, we examine a
@@ -31,18 +31,18 @@ However, this model has not been studied extensively in this forum.
 Following the example of Ref.~\cite{Papucci:2014iwa}, the interaction Lagrangian is written as
 
 \begin{equation}
-\mathcal{L}_{\mathrm{int}} = g \sum_{i=1,2} (\phi_L^i \bar{Q}_L^i + \phi_{uR}^i \bar{u}_R^i + \phi_{dR}^i \bar{d}_R^i) \chiDM
+\mathcal{L}_{\mathrm{int}} = g \sum_{i=1,2} (\phi_{(i),L} \bar{Q}_{(i),L} + \phi_{(i),u,R} \bar{u}_{(i),R} + \phi_{(i),d,R} \bar{d}_{(i),R}) \chiDM
 \end{equation}
 
-where $Q_L^i$, $u_R^i$ and $d_R^i$ are the SM quarks and $\phi_L^i$, $\phi_{uR}^i$ and $\phi_{dR}^i$ are the corresponding mediators, which 
+where $Q_{(i),L}$, $u_{(i),R}$ and $d_{(i),R}$ are the SM quarks of the $i$-th generation and $\phi_{(i),L}$, $\phi_{(i),u,R}$ and $\phi_{(i),d,R}$ are the corresponding mediators, which 
 (unlike the \schannel mediators) must be heavier than $\chiDM$. 
-These mediators have SM gauge representations under $(SU(3), SU(2))_Y$ of $(3,2)_{-1/6}$, $(3,1)_{2/3}$ and $(3,1)_{-1/3}$ respectively. Variations of the model previously studied in the literature include coupling to the left-handed quarks only~\cite{Chang:2013oia, Busoni:2014haa}, to the $\phi_{uR}^i$ \cite{Tait:2013} or $\phi_{dR}^i$ \cite{Papucci:2014iwa, Yavin:14092893}, or some combination~\cite{Bai:2013iqa, An:2013xka}.
+These mediators have SM gauge representations under $(SU(3), SU(2))_Y$ of $(3,2)_{-1/6}$, $(3,1)_{2/3}$ and $(3,1)_{-1/3}$ respectively. Variations of the model previously studied in the literature include coupling to the left-handed quarks only~\cite{Chang:2013oia, Busoni:2014haa}, to the $\phi_{(i),u,R}$ \cite{Tait:2013} or $\phi_{(i),d,R}$ \cite{Papucci:2014iwa, Yavin:14092893}, or some combination~\cite{Bai:2013iqa, An:2013xka}.
 
 %\vspace{5mm}
 
 As for the \schannel models, we assume Minimal Flavor Violation (MFV),
 setting the mediator masses for each flavor equal;
-the same logic also applies to the couplings $g$.
+the same logic also applies to the couplings $g$. 
 %Coupling to the third generation breaks the MFV assumption and is thus forbidden.
 The free parameters are then
 
@@ -57,18 +57,18 @@ The minimal width of each mediator is expressed, using the example of decay to a
 
 \begin{equation}
 \begin{split}
-\Gamma (\phi_i \rightarrow \bar{u}_i \chiDM) &= \frac{g_i^2}{16 \pi M_{\phi_i}^3}(M_{\phi_i}^2 - m_{u_i}^2 - \mDM^2) 		\\
+\Gamma (\phi_{(i)} \rightarrow \bar{u}_{(i)} \chiDM) &= \frac{g_{(i)}^2}{16 \pi M_{\phi_{(i)}}^3}(M_{\phi_{(i)}}^2 - m_{u_{(i)}}^2 - \mDM^2) 		\\
 					   & \times
-%\sqrt{M_{\phi_i}^4 + m_{u_i}^4 + \mDM^4 - 2M_{\phi_i}^2m_{u_i}^2 - 2M_{\phi_i}^2\mDM^2 - 2m_{u_i}^2\mDM^2} \, ,
-\sqrt{(M_{\phi_i}^2 - (m_{u_i} + \mDM)^2)(M_{\phi_i}^2 - (m_{u_i}-\mDM)^2)} \, ,
+%\sqrt{M_{\phi_{(i)}}^4 + m_{u_{(i)}}^4 + \mDM^4 - 2M_{\phi_{(i)}}^2m_{u_{(i)}}^2 - 2M_{\phi_{(i)}}^2\mDM^2 - 2m_{u_{(i)}}^2\mDM^2} \, ,
+\sqrt{(M_{\phi_{(i)}}^2 - (m_{u_{(i)}} + \mDM)^2)(M_{\phi_{(i)}}^2 - (m_{u_{(i)}}-\mDM)^2)} \, ,
 \end{split}
 \end{equation}
 which reduces to 
 
 \begin{equation}
-\frac{g_i^2 M_{\phi_i}}{16 \pi} \left(1 - \frac{\mDM^2}{M_{\phi_i}^2} \right)^2
+\frac{g_{(i)}^2 M_{\phi_{(i)}}}{16 \pi} \left(1 - \frac{\mDM^2}{M_{\phi_{(i)}}^2} \right)^2
 \end{equation}
-in the limit $M_{\phi_i}, \mDM \gg m_{u_i}$.
+in the limit $M_{\phi_{(i)}}, \mDM \gg m_{u_{(i)}}$.
 
 %\vspace{5mm}
 
@@ -78,11 +78,11 @@ in the limit $M_{\phi_i}, \mDM \gg m_{u_i}$.
 
 The leading-order processes involved in \MET{}+jet production are shown
 in Fig. \ref{fig:tchannelMonojet}.
-Note that the generation index for $\phi$ is linked to the incoming
+Note that the generation index $i$ for $\phi_{(i)}$ is linked to the incoming
 fermion(s), and it runs on all three quark generations due to 
 the MFV assumption. 
-%Thus, mono-jet production via $\phi^3_u$ is not possible at
-%this order, while production through $\phi^3_d$ is suppressed by
+%Thus, mono-jet production via $\phi_{(3),u}$ is not possible at
+%this order, while production through $\phi_{(3),d}$ is suppressed by
 %the $b$ parton PDF.
 %fermion(s).
 %CD: probably not needed? It's clear we need all three quarks. 
@@ -92,11 +92,11 @@ and $g$ is sufficiently large, LHC searches will still be sensitive to this mode
 as explained in Section~\ref{sec:singleb}.
 
 This model can also give a signal in the \MET + di-jet
-channel when, for example, the $\chiDM$ is exchanged in the
+channel when, for example, the \chiDM is exchanged in the
 \tchannel and the resulting $\phi$ pair each decay to a jet +
-$\chiDM$. Fig.~\ref{fig:tchannelDijet} shows the leading order diagrams.
+\chiDM. Fig.~\ref{fig:tchannelDijet} shows the leading order diagrams.
 Except for the $gg$ induced process, di-jet production
-through $\phi^3_u$ is not possible, and production through $\phi^3_d$ is
+through the third-generation mediator $\phi_{(3),u}$ is not possible, and production through $\phi_{(3),d}$ is
 again suppressed. 
 The diagram involving the \tchannel exchange
 of $\chiDM$ is strongly dependent upon the Dirac fermion assumption.
@@ -144,7 +144,7 @@ DM searches should also directly test their sensitivity to the MSSM benchmark mo
     \fmf{wiggly,tension=0}{v2,o2}
     \fmf{fermion}{i1,v1,o1}
     \fmf{wiggly,tension=0}{v1,o1}
-    \fmf{scalar,label={\Large $\phi_{1,,2}$}}{v1,v2}
+    \fmf{scalar,label={\Large $\phi_{(1),,(2)}$}}{v1,v2}
     \fmflabel{\Large ${\bar{\chiDM}}$}{o1}
     \fmflabel{\Large ${\chiDM}$}{o2}
     \fmfdot{v1,v2,visr}
@@ -152,6 +152,28 @@ DM searches should also directly test their sensitivity to the MSSM benchmark mo
     \fmflabel{\Large ${g}$}{isr}
     \fmfdot{v1,v2,visr}
   \end{feynmandiagram}\quad
+  \begin{feynmandiagram}[modelTmonojetAbar]
+    \fmfleft{i1,i2}
+    \fmfright{o1,o2}
+    \fmfbottom{isr}
+    \fmflabel{\Large ${\bar{q}}$}{i1}
+    \fmflabel{\Large ${q}$}{i2}
+    \fmf{fermion}{i2,v2}
+    \fmf{phantom}{v2,o2}
+    \fmf{phantom,tension=0}{pisr,isr}
+    \fmf{fermion,tension=0}{v1,o1}
+    \fmf{wiggly,tension=0}{v2,o2}
+    \fmf{fermion}{i1,visr,v1}
+    \fmf{fermion}{v1,pisr,o1}
+    \fmf{wiggly,tension=0}{v2,o2}
+    \fmf{scalar,label={\Large $\phi_{(1),,(2)}$}}{v1,v2}
+    \fmflabel{\Large ${\bar{\chiDM}}$}{o1}
+    \fmflabel{\Large ${\chiDM}$}{o2}
+    \fmfdot{v1,v2,visr}
+    \fmf{gluon,tension=0}{visr,isr}
+    \fmflabel{\Large ${g}$}{isr}
+    \fmfdot{v1,v2,visr}
+  \end{feynmandiagram}\\\vspace{3\baselineskip}
   \begin{feynmandiagram}[modelTmonojetC]
     \fmfleft{i1,i2}
     \fmfright{o1,o2,o3}
@@ -160,7 +182,7 @@ DM searches should also directly test their sensitivity to the MSSM benchmark mo
     \fmf{wiggly}{v3,o3}
     \fmf{gluon}{i1,v1}
     \fmf{fermion}{v2,v1,o1}
-    \fmf{scalar,label={\Large $\phi_{1,,2}$}}{v3,v2}
+    \fmf{scalar,label={\Large $\phi_{(1),,(2)}$}}{v3,v2}
     \fmf{fermion,tension=0}{v2,o2}
     \fmf{wiggly}{v2,o2}
     \fmflabel{\Large ${q}$}{i2}
@@ -169,14 +191,14 @@ DM searches should also directly test their sensitivity to the MSSM benchmark mo
     \fmflabel{\Large $q$}{o1}
     \fmflabel{\Large $\bar{\chiDM}$}{o2}
     \fmfdot{v1,v2,v3}
-  \end{feynmandiagram}\\\vspace{3\baselineskip}
+  \end{feynmandiagram}\quad
   \begin{feynmandiagram}[modelTmonojetB]
     \fmfleft{i1,i2}
     \fmfright{o1,o2,o3}
     \fmf{gluon}{i1,v1}
     \fmf{fermion}{i2,v1}
     \fmf{fermion,tension=2}{v1,v2}
-    \fmf{scalar,label={\Large $\phi_{1,,2}$}}{v2,v3}
+    \fmf{scalar,label={\Large $\phi_{(1),,(2)}$}}{v2,v3}
     \fmf{fermion}{v3,o3}
     \fmf{fermion,tension=0}{v2,o1}
     \fmf{wiggly}{v2,o1}
@@ -188,14 +210,14 @@ DM searches should also directly test their sensitivity to the MSSM benchmark mo
     \fmflabel{\Large $q$}{o3}
     \fmflabel{\Large $\bar{\chiDM}$}{o2}
     \fmfdot{v1,v2,v3}
-  \end{feynmandiagram}\quad
+  \end{feynmandiagram}\\\vspace{3\baselineskip}
   \begin{feynmandiagram}[modelTmonojetD]
     \fmfleft{i1,i2}
     \fmfright{o1,o2,o3}
     \fmf{gluon}{i1,v1}
     \fmf{fermion}{i2,v2}
-    \fmf{scalar,label={\Large $\phi_{1,,2}$}}{v2,v1}
-    \fmf{scalar,label={\Large $\phi_{1,,2}$}}{v1,v3}
+    \fmf{scalar,label={\Large $\phi_{(1),,(2)}$}}{v2,v1}
+    \fmf{scalar,label={\Large $\phi_{(1),,(2)}$}}{v1,v3}
     \fmf{fermion}{v3,o2}
     \fmf{fermion,tension=0}{v3,o1}
     \fmf{wiggly}{v3,o1}
@@ -207,14 +229,14 @@ DM searches should also directly test their sensitivity to the MSSM benchmark mo
     \fmflabel{\Large $q$}{o2}
     \fmflabel{\Large $\bar{\chiDM}$}{o1}
     \fmfdot{v1,v2,v3}
-  \end{feynmandiagram}\\\vspace{3\baselineskip}
+  \end{feynmandiagram}\quad
   \begin{feynmandiagram}[modelTmonojetE]
     \fmfleft{i1,i2}
     \fmfright{o1,o2,o3}
     \fmf{fermion}{i2,v3,o3}
     \fmf{fermion}{o1,v1,i1}
-    \fmf{scalar,label={$\phi_{1,,2}$}}{v1,v2}
-    \fmf{scalar,label={$\phi_{1,,2}$}}{v2,v3}
+    \fmf{scalar,label={$\phi_{(1),,(2)}$}}{v1,v2}
+    \fmf{scalar,label={$\phi_{(1),,(2)}$}}{v2,v3}
     \fmf{gluon}{v2,o2}
     \fmf{wiggly,tension=0}{v3,o3}
     \fmf{wiggly,tension=0}{v1,o1}
@@ -236,9 +258,9 @@ DM searches should also directly test their sensitivity to the MSSM benchmark mo
     \fmf{gluon}{i2,v2}
     \fmf{gluon}{i1,v1}
     \fmf{scalar}{v4,v2,v1,v3}
-    \fmf{phantom,tension=0,label={$\phi_{1,,2}$}}{v2,v1}
-    \fmf{phantom,tension=0,label={$\phi_{1,,2}$}}{v4,v2}
-    \fmf{phantom,tension=0,label={$\phi_{1,,2}$}}{v1,v3}
+    \fmf{phantom,tension=0,label={$\phi_{(1),,(2)}$}}{v2,v1}
+    \fmf{phantom,tension=0,label={$\phi_{(1),,(2)}$}}{v4,v2}
+    \fmf{phantom,tension=0,label={$\phi_{(1),,(2)}$}}{v1,v3}
     \fmf{fermion}{o3,v4,o4}
     \fmf{fermion}{o2,v3,o1}
     \fmf{wiggly,tension=0}{v4,o4}
@@ -258,8 +280,8 @@ DM searches should also directly test their sensitivity to the MSSM benchmark mo
     \fmf{fermion}{i1,v1}
     \fmf{scalar}{v4,v2}
     \fmf{scalar}{v1,v3}
-    \fmf{phantom,tension=0,label={$\phi_{1,,2}$}}{v4,v2}
-    \fmf{phantom,tension=0,label={$\phi_{1,,2}$}}{v1,v3}
+    \fmf{phantom,tension=0,label={$\phi_{(1),,(2)}$}}{v4,v2}
+    \fmf{phantom,tension=0,label={$\phi_{(1),,(2)}$}}{v1,v3}
     \fmf{phantom,tension=0,label={$\chiDM$}}{v2,v1}
     \fmf{fermion}{v2,v1}
     \fmf{wiggly,tension=0}{v2,v1}
@@ -282,7 +304,7 @@ DM searches should also directly test their sensitivity to the MSSM benchmark mo
     \fmf{gluon}{v4,o4}
     \fmf{fermion}{v3,o3}
     \fmf{wiggly,tension=0}{v3,o3}
-    \fmf{scalar,label={$\phi_{1,,2}$}}{v3,v2,v1}
+    \fmf{scalar,label={$\phi_{(1),,(2)}$}}{v3,v2,v1}
     \fmf{gluon}{i1,v2}
     \fmf{fermion}{v1,o2}
     \fmf{fermion}{o1,v1}
@@ -302,7 +324,7 @@ DM searches should also directly test their sensitivity to the MSSM benchmark mo
     \fmf{fermion}{v3,v4,i2}
     \fmf{gluon}{v4,o4}
     \fmf{gluon}{v1,o1}
-    \fmf{scalar,label={$\phi_{1,,2}$}}{v2,v3}
+    \fmf{scalar,label={$\phi_{(1),,(2)}$}}{v2,v3}
     \fmf{fermion}{o3,v3}
     \fmf{wiggly,tension=0}{o3,v3}
     \fmf{fermion}{v2,o2}
@@ -320,7 +342,7 @@ DM searches should also directly test their sensitivity to the MSSM benchmark mo
     \fmfright{o1,o2,o3,o4}
     \fmf{fermion}{i1,v1,o1}
     \fmf{fermion}{o4,v4,i2}
-    \fmf{scalar,label={$\phi_{1,,2}$}}{v1,v2,v3,v4}
+    \fmf{scalar,label={$\phi_{(1),,(2)}$}}{v1,v2,v3,v4}
     \fmf{fermion}{v2,o2}
     \fmf{fermion}{o3,v3}
     \fmf{wiggly,tension=0}{v4,o4}
@@ -331,6 +353,27 @@ DM searches should also directly test their sensitivity to the MSSM benchmark mo
     \fmflabel{\Large ${q}$}{o2}
     \fmflabel{\Large $\chiDM$}{o1}
     \fmflabel{\Large $\bar{\chiDM}$}{o4}
+    \fmfdot{v1,v2,v3,v4}
+  \end{feynmandiagram}\quad
+  \begin{feynmandiagram}[modelTDijetGGG]
+    \fmfleft{i1,i2}
+    \fmfright{o1,o2,o3,o4}
+    \fmf{gluon}{i2,v1}
+    \fmf{gluon}{i1,v1}
+    \fmf{gluon}{v1,v2}
+    \fmf{scalar}{v4,v2,v3}
+    \fmf{phantom,tension=0,label={$\phi_{(1),,(2)}$}}{v4,v2}
+    \fmf{phantom,tension=0,label={$\phi_{(1),,(2)}$}}{v2,v3}
+    \fmf{fermion}{o3,v4,o4}
+    \fmf{fermion}{o2,v3,o1}
+    \fmf{wiggly,tension=0}{v4,o4}
+    \fmf{wiggly,tension=0}{v3,o2}
+    \fmflabel{\Large ${g}$}{i2}
+    \fmflabel{\Large ${g}$}{i1}
+    \fmflabel{\Large $\chiDM$}{o4}
+    \fmflabel{\Large $\bar{\chiDM}$}{o2}
+    \fmflabel{\Large $\bar{q}$}{o3}
+    \fmflabel{\Large $q$}{o1}
     \fmfdot{v1,v2,v3,v4}
   \end{feynmandiagram}
 \caption{Leading order two-jet \tchannel processes, adapted from \cite{Papucci:2014iwa}.}\label{fig:tchannelDijet}
@@ -356,7 +399,7 @@ of the mediator, as is visible in Figs.~5 and 6 of
 Ref.~\cite{Papucci:2014iwa}, except in the heavy mediator limit ($\Mphi \approx 2$\,TeV). 
 %In the heavy mediator limit, the rates of the first three diagrams of
 %Fig.~\ref{fig:tchannelMonojet} scale as one with the coupling $g$. 
-A scan over the width was not available for this report; thus we recommend scanning a range of 
+A scan over the width was not available for this report.  Thus we recommend scanning a range of 
 possible widths as discussed in a more-limited way for the \schannel mono-jet, spanning from the minimal 
 width to a value approaching the particle limit (for example, $\Gamma \approx \Mphi/3$ in Ref.~\cite{Papucci:2014iwa}).
 
@@ -364,10 +407,10 @@ width to a value approaching the particle limit (for example, $\Gamma \approx \M
 \label{sub:EW_TChannel}
 
 The model parameters with emission of an EW boson 
-generally follow those in Section~\ref{subsec:MonojetLikeModels},
+generally follow those in Section~\ref{sec:monojet_t_channel}.
 even though fewer diagrams are involved.   
 A representative Feynman diagram can be
-constructed by replacing a gluon in Fig.~\ref{fig:tchannelMonojet}
+constructed by replacing a final-state gluon in Fig.~\ref{fig:tchannelMonojet}
 with a $\gamma,W,Z$ boson. See Ref.~\cite{Bell:2012rg} for a theoretical overview
 of this model with specific examples for the Z+\MET final state. 
 
